# github-to-notion-sync

./: .gitignore  .pre-commit-config.yaml  ACT_GUIDE.md  AGENTS.md  MEMORY.md  Makefile  PRD.mdc  PRE_COMMIT_GUIDE.md  README.md  README_TESTING.md  check_database_properties.py  database_analysis.json  get_notion_users.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup_flexible_work.py  test-ci-local.sh  test_assignee_mapping.py  test_report.md
.claude/: settings.json
.claude/hooks/: kb-intel-compile.py  post-edit-format.sh  stop-sound.sh
.claude/rules/: caveman-mode.md  code-review-graph.md  critical-thinking.md  ecc-token-strategy.md  hook-flag-file-pattern.md  mcp-graceful-degradation.md  omc-task-fsm.md  output-token-discipline.md  repo-root-path-depth.md  rtk-token-optimization.md  session-management.md  skill-description-quality.md  sra-incorporation-guard.md  token-diet-hygiene.md
.cursor/: hooks.json  mcp.json  notion_split_base_image.py
.cursor/commands/: 199-deep-research.md  4phase-debugging.md  act-as.md  adaptive-tutor.md  agent-browser.md  agent-desk.md  agentic-competency.md  ai-brief.md  ai-decide.md  ai-learn.md  ai-quality.md  ai-recall.md  ai-status.md  ai-workflow.md  ai.md  air-gap.md  algorithmic-art.md  alphaear-deepear-lite.md  alphaear-intel.md  alphaear-logic-visualizer.md  alphaear-news.md  alphaear-predictor.md  alphaear-reporter.md  alphaear-search.md  alphaear-sentiment.md  alphaear-signal-tracker.md  alphaear-stock.md  alphaxiv-lookup.md  analyze-performance.md  anti-example.md  api-docs.md  arch-review-prep.md  architecture-diagram.md  assumption-audit.md  audience.md  auto-commit.md  auto-research-distribute.md  auto-research.md  autoagent.md  automation-strategy.md  (+540 more)
.cursor/hooks/: fat-thin-guard.mjs  hooks.json  post-task-asset-extractor.mjs
.cursor/plans/: browser_tab_testing_179b2feb.plan.md  full-stack_skill_pipeline_4a95edf0.plan.md  grpo_reward_function_확장성_설계_c9211713.plan.md  notion_meeting_digest_upload_2170bf63.plan.md  project-upgrade-plan.md  rebellion_attachment_polish_983e3919.plan.md
.cursor/rules/: 00-core.mdc  ACT_GUIDE.mdc  PRD.mdc  agency-commands.mdc  agent-10step-quality.mdc  agent-data-flow-security.mdc  atg-routing.mdc  autoagent-experiment.mdc  autoskill-evolution.mdc  backend-api.mdc  bugfix-loop.mdc  chart-colors.mdc  code-review-graph.mdc  codemap-maintenance.mdc  context-architecture.mdc  critical-thinking.mdc  design-system.mdc  done-checklist.mdc  ecc-token-strategy.mdc  fat-thin-principle.mdc  frontend-react.mdc  git-push-pull.mdc  git-rules copy.mdc  git-rules.mdc  github-workflow.mdc  hermes-inline-learning.mdc  hermes-safety-rules.mdc  kb-conventions.mdc  kis-safety.mdc  kwp-index.mdc  lat-md.mdc  learned-memory.mdc  mirofish-escalation.mdc  observability.mdc  output-token-discipline.mdc  parallel-orchestration.mdc  pipeline-skill-intermediate-persistence.mdc  plan-mode-review.mdc  post-skill-creation.mdc  post-task-reflection.mdc  (+21 more)
.cursor/sentinel/: mission-log.yaml  mission-templates.yaml  pm-sentinel-cli.py  sentinel-state.yaml  sentinel-tips.yaml
.cursor/skills/: README.md  SKILL.md  skill-evolution-config.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
config/: field_mappings.yml  field_mappings_test.yml  sprint_config.yml
docs/: CONTRIBUTING.md  ENVIRONMENT_VARIABLES.md  GITHUB_SCRUM_WORKFLOW.md  SETUP_TROUBLESHOOTING.md
memory/: index.md
queries/: get_project_fields.graphql  get_project_items.graphql  get_single_item.graphql
scripts/: README_copy_database_sync.md  README_create_new_database_sync.md  README_markdown_sync.md  README_sprint_stats.md  add_archive_status.py  add_github_id_field.py  add_storypoints_field.py  analyze_notion_database.py  check_current_properties.py  check_notion_status_field.py  check_notion_status_options.py  check_pages.py  complete_resync.py  copy_database_and_sync.py  create_new_database_sync.py  daily_scrum_sync.py  debug_github_data.py  debug_notion_response.py  debug_project_fields.py  extract_meeting_scripts.py  final_sync_test.py  full_sync.py  init-gitrepo.sh  migrate_to_multi_team.py  qa_issues_sync.py  quick_test.py  simple_sync_test.py  sprint_pr_review_check.py  sprint_stats.py  sprint_summary_sync.py  sync_markdown_to_notion.py  test_copy_database.py  test_field_parsing.py  test_functionality.py  test_report.py  validate_setup.py
src/: config.py  main.py
tasks/: todo.md
tests/: conftest.py  test_integration.py  test_sprint_pr_review.py
(+4116 files in other folders)
