[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-to-notion-sync"
version = "1.0.0"
description = "GitHub Project와 Notion Database 간의 자동 동기화 시스템"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Thaki Team"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

# Black 설정
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 제외할 디렉토리
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# isort 설정
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [".venv", "venv", "__pycache__", ".git"]

# Ruff 설정 (flake8, pylint 대체)
[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "__pycache__",
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "DJ",  # flake8-django
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501",   # line too long (black이 처리)
    "S101",   # assert 사용 허용 (테스트용)
    "S104",   # possible binding to all interfaces 허용
    "PLR0913", # too many arguments 완화
    "TRY003", # 긴 예외 메시지 허용
    "EM101",  # 예외 메시지에 문자열 리터럴 허용
    "COM812", # trailing comma (formatter와 충돌)
    "ISC001", # implicit string concatenation (formatter와 충돌)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert 사용
    "ARG",    # 미사용 인자
    "PLR2004", # magic value
]
"scripts/**/*.py" = [
    "T201",   # print 사용
]

[tool.ruff.lint.mccabe]
max-complexity = 10

# Mypy 설정
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

# Pytest 설정
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]
markers = [
    "integration: 통합 테스트",
    "unit: 단위 테스트",
    "slow: 느린 테스트",
]
asyncio_mode = "auto"

# Coverage 설정
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abstract",
]

# Bandit 설정 (보안 검사)
[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv", "venv"]
skips = ["B101", "B601"]  # assert, shell=True 허용

[tool.bandit.assert_used]
skips = ["*/test_*.py"]

# Pydocstyle 설정
[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D107"]
match = "(?!test_).*\\.py"
match_dir = "^(?!(tests|scripts|migrations)).*"

